# skim-pinyin

./: Cargo.toml  ReadMe.md
scripts/: fp.fish
src/: main.rs
