[package]
name = "skim-pinyin"
version = "0.1.0"
edition = "2021"
description = "A tool for searching current dir with fuzzy pinyin power"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = "*"
pinyin = "0.9"
clap = { version = "4.2.7", features = ["derive"] }

[[bin]]
name = "skim-pinyin"
path = "src/main.rs"
